--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: "3.9"
 services:
   app:
     build:
@@ -30,7 +30,8 @@ services:
     ports:
      - "3308:3306"
     volumes:
-      - ./docker-compose/mysql:/docker-entrypoint-initdb.d
+      - db_data:/docker-entrypoint-initdb.d
+      - db_data:/var/lib/mysql
     networks:
       - checklistapp
 
@@ -62,3 +63,6 @@ services:
 networks:
   checklistapp:
     driver: bridge
+
+volumes:
+  db_data: {}
